tests/negative/neg_pr1111b_interface_object.safe
package neg_pr1111b_interface_object

   type printable is interface
      function (self : printable) label returns string;

   item : printable;
